# fulllyhacks_2026

./: .gitignore  README.md
client/: README.md
client/fullyhacks/: AGENTS.md  STRUCTURE.md  auth.ts  middleware.ts  package-lock.json  package.json
client/fullyhacks/app/: elevenlabs.tsx  globals.css  layout.tsx  page.tsx
client/fullyhacks/app/api/scribe-token/: route.ts
client/fullyhacks/app/api/tts/: route.ts
client/fullyhacks/app/conversation/: page.tsx
client/fullyhacks/app/leaderboard/: page.tsx
client/fullyhacks/app/login/: page.tsx
client/fullyhacks/app/report/: page.tsx
client/fullyhacks/app/setup/: page.tsx
client/fullyhacks/components/: CompetitionPanel.tsx  DiseaseSelector.tsx  GoogleAuthCard.tsx  ScenarioEditor.tsx
client/fullyhacks/lib/: api.ts  scenarios.ts  validators.ts
client/fullyhacks/types/: next-auth.d.ts  scenario.ts
server/: .env.example  CLAUDE.md  app.py  auth.py  build_kb.py  chat.py  curriculum.py  db.py  diseases.json  inference.py  knowledge_base.py  main.py  model.py  pyproject.toml  report.py  requirements.txt  session.py
server/notebooks/: medical_symptom_simulator.ipynb
server/qwen-patient-adapter/: README.md  adapter_config.json
server/tests/: conftest.py  test_knowledge_base.py  test_routes.py
