[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "faker>=40.15.0",
    "fastapi>=0.136.0",
    "groq>=1.2.0",
    "humandelta>=0.1.1",
    "peft>=0.19.1",
    "pydantic>=2.13.2",
    "torch>=2.11.0",
    "transformers>=5.5.4",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
